[GPU-Canvas] MinorGC markers are not visible on a profile
Categories
(Core :: Graphics: Canvas2D, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox-esr128 | --- | fixed |
| firefox128 | --- | unaffected |
| firefox129 | --- | unaffected |
| firefox130 | --- | fixed |
People
(Reporter: mayankleoboy1, Assigned: lsalzman)
References
(Regression, )
Details
(Keywords: regression)
Attachments
(3 files)
|
45.22 KB,
text/plain
|
Details | |
|
131.07 KB,
image/png
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-esr128+
|
Details |
Open https://share.firefox.dev/4fpfFnx
AR: The yellow colored minorGC markers are not visible on the "Memory" track
ER: They shoudl be visible.
Regressed by: bug 1910138
| Reporter | ||
Comment 1•1 year ago
|
||
| Reporter | ||
Updated•1 year ago
|
Comment 2•1 year ago
|
||
Set release status flags based on info from the regressing bug 1910138
:lsalzman, since you are the author of the regressor, bug 1910138, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
| Reporter | ||
Comment 3•1 year ago
|
||
| Reporter | ||
Comment 4•1 year ago
|
||
With gpu-canvas manually enabled, bisection:
Bug 1874314 - Better anti-aliasing for subpixel rectangles. r=aosmond
The existing distance-to-edge AA scheme breaks down somewhat when rectangles
have subpixel areas. We need to bias the AA to account for this situation when
the scales get to these subpixel sizes.
Differential Revision: https://phabricator.services.mozilla.com/D215095
Updated•1 year ago
|
| Assignee | ||
Comment 5•1 year ago
|
||
The previous attempt at refining the subpixel anti-aliasing approximation modified the
distance-to-edge tracking, which can cause the AA to approach zero too soon.
This fixes this by reverting the distance-to-edge tracking back to the way it was, but
instead limiting the alpha to the area of the subpixel rectangle if necessary.
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
Comment 7•1 year ago
|
||
| bugherder | ||
| Reporter | ||
Comment 8•1 year ago
|
||
This is fixed for me on the latest Nightly
| Assignee | ||
Comment 9•1 year ago
|
||
Comment on attachment 9417622 [details]
Bug 1911019 - Use different anti-aliasing approximation for subpixel rectangles. r?aosmond
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Rendering artifacts in Canvas2D.
- User impact if declined: Rendering artifacts in Canvas2D.
- Fix Landed on Version: 130
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Seems stable in nightly.
Comment 10•1 year ago
|
||
Comment on attachment 9417622 [details]
Bug 1911019 - Use different anti-aliasing approximation for subpixel rectangles. r?aosmond
Approved for 128.2esr.
Updated•1 year ago
|
Comment 11•1 year ago
|
||
| uplift | ||
Description
•