Bug 1911019 - Use different anti-aliasing approximation for subpixel rectangles. r=aosmond a=RyanVM

The previous attempt at refining the subpixel anti-aliasing approximation modified the
distance-to-edge tracking, which can cause the AA to approach zero too soon.

This fixes this by reverting the distance-to-edge tracking back to the way it was, but
instead limiting the alpha to the area of the subpixel rectangle if necessary.

Differential Revision: https://phabricator.services.mozilla.com/D218493